--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,9 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(125, 185, 179, 0.5);
-	z-index: 1;
 	pointer-events: none;
+}
+
+.white-color {
+	filter: brightness(0) invert(1);
 }
